# plugify-module-mono

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  config  config.json  config.txt  csharp-lang-module.json  csharp-lang-module.pmodule  csharp-lang-module.wmodule  mono-lang-module.json  mono-lang-module.pmodule  mono-lang-module.pmodule.in  plugin.pplugin.in  plugin.wplugin.in
.github/workflows/: cmake-multiple-platform.yml
configs/: mono-lang-module.json  mono_config
generator/: generator.py
managed/ExamplePlugin/: ExamplePlugin.cs  ExamplePlugin.sln
managed/ExamplePlugin/ExamplePlugin/: ExamplePlugin.cs  ExamplePlugin.csproj
managed/ExamplePlugin/Properties/: AssemblyInfo.cs
managed/Plugify/: InternalCalls.cs  MinimumApiVersion.cs  Plugify.csproj  Plugin.cs
managed/Plugify/Math/: Color.cs  Color32.cs  Matrix4x4.cs  Quaternion.cs  Vector2.cs  Vector3.cs  Vector4.cs
managed/Plugify/Plugify/Math/: Vector2.cs  Vector3.cs  Vector4.cs
managed/Plugify/Properties/: AssemblyInfo.cs
plugins/: build_core.py  build_plugins.py
plugins/Plugins/Plugins/: Plugins.csproj
plugins/Plugins/Plugins/src/: Plugin1.cs  Plugin2.cs  Plugin3.cs  Plugin4.cs
plugins/Wand/: Wand.sln
plugins/Wand/Wand/src/: InternalCalls.cs
script-core/ExamplePlugin/ExamplePlugin/: ExamplePlugin.cs  ExamplePlugin.csproj  ExamplePlugin.pplugin
script-core/Plugify/: Plugify.sln
script-core/Plugify/Plugify/: Plugify.csproj  Plugin.cs
script-core/Plugify/Plugify/Math/: Color.cs  Color32.cs  Mathf.cs  Matrix4x4.cs
script-core/Plugify/Plugify/src/: InternalCalls.cs  Plugin.cs  Subscribe.cs
script-core/Plugins/Plugins/: Plugins.csproj
script-core/Plugins/Plugins/src/: Plugin1.cs  Plugin2.cs  Plugin3.cs  Plugin4.cs
script-core/Wand/: Wand.sln
script-core/Wand/Wand/src/: Plugin.cs  Subscribe.cs
src/: date_time.h  fwd.h  glue.cpp  glue.h  module.cpp  module.h  pch.h  script_engine.cpp  script_engine.h  script_glue.cpp  script_glue.h  utils.cpp  utils.h
src/core/: file_system.h  main.cpp  plugin_glue.cpp  plugin_glue.h  plugin_manager.cpp  plugin_manager.h
sym/: exported_symbols.lds  version_script.lds
test/cross_call_worker/: cross_call_worker.pplugin  cross_call_worker.sln
test/cross_call_worker/cross_call_worker/: ExportClass.cs  Program.cs  ReverseClass.cs  cross_call_worker.csproj
test/cross_call_worker/cross_call_worker/Properties/: AssemblyInfo.cs
test/cross_call_worker/cross_call_worker/pps/: cross_call_master.cs
tests/cpp_test/: CMakeLists.txt  cpp_test.pplugin  plugin.cpp  plugin.h
tests/cpp_test/plugify/: cpp_plugin.h
tests/cpp_test/pps/: CSharpTest.h
tests/cpp_test/test/: test.h
tests/csharp_test/: CSharpTest.sln
tests/csharp_test/CSharpTest/: CSharpTest.csproj  CSharpTest.pplugin  CSharpTestPlugin.cs  ExportClass.cs
tests/csharp_test/CSharpTest/Properties/: AssemblyInfo.cs
tests/csharp_test/CSharpTest/pps/: cpp_test.cs
